# aparse

./: .gitignore  CMakeLists.txt  DOCS.md  Doxyfile  README.md
example/: example.c  main.c  subcmd_example.c  tests.c
include/: aparse.h  aparse_black_magic.h  aparse_list.h
script/: amalgamation.py  merger.py
src/: aparse.c  aparse_list.c  aparse_list.h
